experimental/parser/testdata/parser/expr.proto.stderr.txt
error: unexpected integer literal in message expression
  --> testdata/parser/expr.proto:45:22
   | 
45 | option (test.bad) = {1, 2, 3};
   |                      ^ expected message field value

error: unexpected integer literal in message expression
  --> testdata/parser/expr.proto:45:25
   | 
45 | option (test.bad) = {1, 2, 3};
   |                         ^ expected message field value

error: unexpected integer literal in message expression
  --> testdata/parser/expr.proto:45:28
   | 
45 | option (test.bad) = {1, 2, 3};
   |                            ^ expected message field value

error: unexpected `;` after `-`
  --> testdata/parser/expr.proto:46:22
   | 
46 | option (test.bad) = -;
   |                      ^ expected expression

error: unexpected `;` after `to`
  --> testdata/parser/expr.proto:47:25
   | 
47 | option (test.bad) = 1 to;
   |                         ^ expected expression

encountered 5 errors
